Fixed resume button spacing in nav bar

--- a/src/App.css
+++ b/src/App.css
@@ -99,6 +99,11 @@ nav ul li {
 
 /****** RESUME a LINK ******/
 
+.resume {
+  padding-bottom: .5rem;
+  padding-left: .5rem;
+}
+
 .resume-a {
   text-decoration: none;
   color: var(--secondary-text-white);
